refactor: 文件上传配置优化